--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@adonisjs/lucid": "^19.0.0",
     "@adonisjs/session": "^7.1.1",
     "@vinejs/vine": "^1.7.0",
-    "adonis5-swagger": "^1.4.1",
+    "adonisjs-6-swagger": "^1.0.0",
     "axios": "^1.6.5",
     "better-sqlite3": "^9.3.0",
     "luxon": "^3.4.4",
