--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,json,css,md}'",
     "format-check": "prettier --check './**/*.{js,jsx,ts,tsx,json,css,md}'",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit"
   },
   "imports": {
     "#controllers/*": "./app/controllers/*.js",
