--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,15 +7,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '21'
+
       - name: Install Dependencies
         run: npm install
+
       - name: Run Lint
         run: npm run lint
+
       - name: Check Formatting
         run: npm run format-check
+
       - name: Check Ts
-        run: npm run ts-check
+        run: npm run typecheck
