--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "#start/*": ["./start/*.js"],
       "#config/*": ["./config/*.js"],
       "#utils/*": ["./app/utils/*.js"],
-      "#api/*": ["./app/_api/*.js"],
-    },
+      "#api/*": ["./app/_api/*.js"]
+    }
   },
+  "exclude": ["swagger"]
 }
